--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1132,7 +1132,7 @@ strong, b, h1, h2, h3, h4, h5, h6 {
     color: #363636;
 }
 h1 {
-    font-size: 2.4em;
+    font-size: 2em;
     letter-spacing: -0.015em;
 }
 h2 {
@@ -1690,6 +1690,7 @@ body.is-preload #wrapper {
     width: 100%;
 }
 #main > .panel.intro header h1 {
+    margin-top:2rem;
     line-height: 1.25em;
     margin-bottom: 0;
 }
